force-app/main/default/objects/CRMG_WF__Workflow_Job_Log__c/CRMG_WF__Workflow_Job_Log__c.object-meta.xml
<CustomObject>
    <label>Workflow Job Log</label>
    <nameField>
        <displayFormat>WF-{00000}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>