force-app/main/default/objects/CRMG_WF__Workflow_Job_Log__c/fields/CRMG_WF__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>