force-app/main/default/objects/CRMG_WF__Workflow_Job_Log__c/fields/CRMG_WF__Failure__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failure</label>
    <type>Checkbox</type>
</CustomField>