force-app/main/default/objects/CRMG_WF__Workflow_Job_Log__c/fields/CRMG_WF__Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Workflow_Name__c</fullName>
    <label>Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>