force-app/main/default/objects/CRMG_WF__Workflow_Job_Log__c/listViews/CRMG_WF__All.listView-meta.xml
<ListView>
    <fullName>CRMG_WF__All</fullName>
    <columns>NAME</columns>
    <columns>CRMG_WF__Error_Message__c</columns>
    <columns>CRMG_WF__Failure__c</columns>
    <columns>CRMG_WF__Workflow_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>